# array-macro

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
array-macro/: Cargo.toml
array-macro-internal/: Cargo.toml
array-macro-internal/src/: lib.rs
array-macro/src/: lib.rs
impure-proc-macro/: Cargo.toml
impure-proc-macro/src/: lib.rs
src/: lib.rs
tests/: test.rs
