[package]
name = "array-macro"
version = "2.1.1"
edition = "2018"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
repository = "https://gitlab.com/KonradBorowski/array-macro"
license = "MIT OR Apache-2.0"
description = "Array multiple elements constructor syntax"
keywords = ["data-structure", "no_std", "array"]
categories = ["data-structures", "no-std"]
documentation = "https://docs.rs/array-macro"

[dev-dependencies]
impure-proc-macro = { path = "impure-proc-macro" }
tokio = { version = "1.0.1", features = ["macros", "rt"] }

[badges]
gitlab = { repository = "KonradBorowski/array-macro" }
maintenance = { status = "actively-developed" }
