[package]
name = "array-macro-internal"
version = "0.1.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
repository = "https://github.com/xfix/array-macro"
license = "MIT/Apache-2.0"
description = "Procedural macro implementation of array-macro"
keywords = ["data-structure", "no_std", "array"]
categories = ["data-structures", "no-std"]
documentation = "https://docs.rs/array-macro"

[badges]
travis-ci = { repository = "xfix/array-macro" }

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.3.3"
